# rmapi-rs

./: Cargo.toml  README.md  WARP.md
.github/workflows/: ci.yml
rmapi/: Cargo.toml
rmapi/src/: client.rs  constants.rs  endpoints.rs  error.rs  filesystem.rs  lib.rs
rmapi/src/objects/: collection.rs  document.rs  dto.rs  entry.rs  internal.rs  mod.rs  node.rs  remarkable_object.rs
rmapi/tests/: client_tests.rs
rmclient/: Cargo.toml
rmclient/src/: main.rs
rmclient/src/rmclient/: actions.rs  commands.rs  completer.rs  error.rs  mod.rs  shell.rs  token.rs
