[package]
name = "rmapi"
description = "A command line client for the reMarkable Cloud API"
readme = "README.md"
keywords = ["remarkable", "cloud", "api", "client"]
categories = []

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "stream",
    "query",
] }
log = "0.4.14"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
const_format = "0.2.33"
tokio = { version = "1.40.0", features = ["fs"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "6.0.0"
base64 = "0.22.1"
crc32c = "0.6.8"
hex = "0.4.3"
sha2 = "0.10.9"
zip = "0.6"
